tests/positive/ownership_return.safe
-- Test: ownership_return
-- Description: Returning ownership from a local inferred-reference owner.
-- Expected: ACCEPT

package ownership_return

   type payload is record
      value : integer
      next : payload

   function build returns not null payload
      source : not null payload = (value = 42, next = null)

      return source

   function use_return
      target : not null payload = build ()
