tests/negative/neg_pr117_casefold_collision.safe
-- Test: neg_pr117_casefold_collision
-- Description: Reference-signal naming rejects same-scope bindings that differ only by case.
-- Expected: REJECT source_frontend_error

package neg_pr117_casefold_collision

   type payload is record
      value : integer;

   type payload_ptr is access payload;

   function demo returns integer
      Source : payload_ptr = null;
      source : payload_ptr = null;

      if Source == null and then source == null
         return 0;

      return 1;
